--- a/frontendrev/donate.html
+++ b/frontendrev/donate.html
@@ -87,6 +87,23 @@
                 are managed responsibly and transparently.
             </div>
         </div>
+
+        <!-- Example Donations -->
+        <div class="card mt-2">
+            <h3>Recent Donation Examples</h3>
+            <div class="card" style="margin-top: 1rem;">
+                <p><strong>Anonymous</strong> donated <strong>XAF 10,000</strong></p>
+                <p style="color: #666; font-size: 0.9rem;">Help with chemotherapy support</p>
+            </div>
+            <div class="card" style="margin-top: 1rem;">
+                <p><strong>Marie N.</strong> donated <strong>XAF 25,000</strong></p>
+                <p style="color: #666; font-size: 0.9rem;">Support for child treatment costs</p>
+            </div>
+            <div class="card" style="margin-top: 1rem;">
+                <p><strong>Jean P.</strong> donated <strong>XAF 5,000</strong></p>
+                <p style="color: #666; font-size: 0.9rem;">Small gift, big impact</p>
+            </div>
+        </div>
     </div>
 
     <!-- Footer -->
