--- a/frontendrev/campaign-details.html
+++ b/frontendrev/campaign-details.html
@@ -56,7 +56,8 @@
                 return;
             }
             
-            const campaign = getCampaignById(campaignId);
+            const campaigns = loadCampaigns();
+            const campaign = campaigns.find((item) => String(item.id) === String(campaignId));
             
             if (!campaign) {
                 document.getElementById('campaignDetails').innerHTML = `
@@ -187,9 +188,6 @@
         // Load campaign details when page loads
         window.addEventListener('load', displayCampaignDetails);
     </script>
-    <script src="api-client.js"></script>
-    <script src="backend-integration.js"></script>
-    <script src="mtn-payment-handler.js"></script>
 </body>
 </html>
 
