--- a/frontendrev/campaigns.html
+++ b/frontendrev/campaigns.html
@@ -39,21 +39,14 @@
         <p>&copy; 2026 CancerCare Platform. Created by six students dedicated to helping cancer patients.</p>
     </footer>
 
-    <script src="api-client.js"></script>
     <script src="script.js"></script>
-    <script src="backend-integration.js"></script>
     <script>
         // Load and display campaigns from backend
         async function displayCampaigns() {
             const container = document.getElementById('campaignsContainer');
             
             try {
-                let campaigns = [];
-                if (window.apiClient) {
-                    campaigns = await window.apiClient.getCampaigns();
-                } else {
-                    campaigns = loadCampaigns();
-                }
+                const campaigns = loadCampaigns();
                 
                 // Clear container
                 container.innerHTML = '';
@@ -127,8 +120,6 @@
         // Load campaigns when page loads
         window.addEventListener('load', displayCampaigns);
     </script>
-    <script src="api-client.js"></script>
-    <script src="backend-integration.js"></script>
 </body>
 </html>
 
