--- a/frontendrev/index.html
+++ b/frontendrev/index.html
@@ -14,8 +14,6 @@
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="campaigns.html">Campaigns</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="partner-hospitals.html">Partner Hospitals</a></li>
             <li><a href="about.html">About Us</a></li>
             <li class="nav-item dropdown nav-notification">
                 <a href="#" class="nav-link dropdown-toggle" id="notificationBell" data-bs-toggle="dropdown" aria-expanded="false">
@@ -55,7 +53,7 @@
             </div>
             <div class="stat-item">
                 <div class="stat-number">3</div>
-                <div class="stat-label">Partner Hospitals</div>
+                <div class="stat-label">Community Donors</div>
             </div>
         </div>
     </section>
@@ -85,8 +83,8 @@
             <div class="steps-container">
                 <div class="step-card">
                     <div class="step-number">1</div>
-                    <h3>Patient Verification</h3>
-                    <p>Cancer patients register and submit medical documents to our partner hospitals for verification.</p>
+                    <h3>Create an Account</h3>
+                    <p>Sign up as a patient or donor to join the community.</p>
                 </div>
 
                 <div class="step-card">
@@ -97,14 +95,14 @@
 
                 <div class="step-card">
                     <div class="step-number">3</div>
-                    <h3>Community Support</h3>
-                    <p>Donors browse verified campaigns and contribute through secure mobile money payments.</p>
+                    <h3>Support a Campaign</h3>
+                    <p>Browse campaigns and donate to patients who need help.</p>
                 </div>
 
                 <div class="step-card">
                     <div class="step-number">4</div>
-                    <h3>Get Treatment</h3>
-                    <p>Funds are used directly for medical treatment, giving patients the care they need.</p>
+                    <h3>Track Progress</h3>
+                    <p>Follow fundraising progress and see the impact of your support.</p>
                 </div>
             </div>
         </div>
