--- a/frontendrev/create-account.html
+++ b/frontendrev/create-account.html
@@ -111,8 +111,6 @@
         <p>&copy; 2026 CancerCare Platform. Created by six students dedicated to helping cancer patients.</p>
     </footer>
 
-    <!-- ONLY LOAD script.js -->
-    <script src="api-client.js"></script>
     <script src="script.js"></script>
     
     <script>
@@ -200,37 +198,23 @@
                 return;
             }
 
-            // Create user in backend
             try {
-                const response = await window.apiClient.registerUser({
-                    fullName,
-                    email,
-                    phone,
-                    password,
-                    accountType
-                });
-                window.apiClient.setAuthToken(response.token);
-                localStorage.setItem('currentUser', JSON.stringify(response.user));
-
-                // Update local offline cache without overwriting backend user data
                 const localUsers = getUserDatabase();
                 const existingIndex = localUsers.findIndex(u => u.email === email);
-                const offlineRecord = {
+                if (existingIndex >= 0) {
+                    showAlert('An account with this email already exists', 'error');
+                    return;
+                }
+
+                saveUserData({
                     fullName,
                     email,
                     phone,
                     accountType,
                     userType: accountType,
-                    verified: response.user.verified || false,
-                    passwordHash: hashPassword(password),
-                    registrationDate: new Date().toISOString()
-                };
-                if (existingIndex >= 0) {
-                    localUsers[existingIndex] = offlineRecord;
-                } else {
-                    localUsers.push(offlineRecord);
-                }
-                localStorage.setItem('userDatabase', JSON.stringify(localUsers));
+                    verified: false,
+                    password
+                });
             } catch (error) {
                 const message = error.message || 'Registration failed';
                 showAlert(message, 'error');
