--- a/frontendrev/campaigns.html
+++ b/frontendrev/campaigns.html
@@ -38,7 +38,7 @@
     <footer class="footer">
         <p>&copy; 2026 CancerCare Platform. Created by six students dedicated to helping cancer patients.</p>
     </footer>
-
+<script src="api-client.js"></script>
     <script src="script.js"></script>
     <script>
         // Load and display campaigns from backend
