--- a/frontendrev/campaign-details.html
+++ b/frontendrev/campaign-details.html
@@ -188,6 +188,7 @@
         // Load campaign details when page loads
         window.addEventListener('load', displayCampaignDetails);
     </script>
+    <script src="api-client.js"></script>
 </body>
 </html>
 
