--- a/frontendrev/donate.html
+++ b/frontendrev/donate.html
@@ -252,6 +252,7 @@
         // Load campaign info when page loads
         window.addEventListener('load', checkCampaignDonation);
     </script>
+    <script src="api-client.js"></script>
 </body>
 </html>
 
